[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformer-lens>=2.16.1",
    "transformers[torch]>=4.55.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
